<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.ZakatFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        app:cardBackgroundColor="@color/purple"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/tvCurrency"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvZakatIs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/zakat_calculated"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@id/tvZakat"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvZakat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="USD 0"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@id/tvZakatIs"
                app:layout_constraintTop_toBottomOf="@id/tvZakatIs" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="4dp"
                android:scaleType="fitEnd"
                android:src="@drawable/zakat"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tvZakatIs"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/choose_currency"
        android:textColor="@color/grey_text"
        app:layout_constraintBottom_toTopOf="@+id/spCurrency"
        app:layout_constraintEnd_toEndOf="@+id/spCurrency"
        app:layout_constraintStart_toStartOf="@+id/spCurrency"
        app:layout_constraintTop_toBottomOf="@id/cardView"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvNisabMeasure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/choose_nisab"
        android:textColor="@color/grey_text"
        app:layout_constraintBottom_toTopOf="@+id/spNisab"
        app:layout_constraintEnd_toEndOf="@+id/spNisab"
        app:layout_constraintStart_toStartOf="@+id/spNisab"
        app:layout_constraintTop_toBottomOf="@+id/spCurrency" />

    <TextView
        android:id="@+id/tvNisab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/enter_nisab"
        android:textColor="@color/grey_text"
        app:layout_constraintBottom_toTopOf="@+id/etNisab"
        app:layout_constraintEnd_toEndOf="@+id/etNisab"
        app:layout_constraintStart_toStartOf="@+id/etNisab"
        app:layout_constraintTop_toBottomOf="@+id/spNisab" />

    <TextView
        android:id="@+id/tvAsset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="4dp"
        android:text="@string/enter_assets"
        android:textColor="@color/grey_text"
        app:layout_constraintBottom_toTopOf="@+id/etAsset"
        app:layout_constraintEnd_toEndOf="@+id/etAsset"
        app:layout_constraintStart_toStartOf="@+id/etAsset"
        app:layout_constraintTop_toBottomOf="@+id/etNisab" />

    <EditText
        android:id="@+id/etNisab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/field"
        android:editable="false"
        android:hint="0"
        android:inputType="none"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/grey_text"
        app:layout_constraintBottom_toTopOf="@+id/tvAsset"
        app:layout_constraintEnd_toEndOf="@+id/tvAsset"
        app:layout_constraintStart_toStartOf="@+id/tvAsset"
        app:layout_constraintTop_toBottomOf="@+id/tvNisab" />

    <EditText
        android:id="@+id/etAsset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/field"
        android:hint="0"
        android:inputType="number"
        android:maxLength="11"
        android:paddingHorizontal="10dp"
        android:paddingVertical="5dp"
        android:textColor="@color/grey_text"
        app:layout_constraintBottom_toTopOf="@+id/tvFaqs"
        app:layout_constraintEnd_toEndOf="@+id/tvFaqs"
        app:layout_constraintStart_toStartOf="@+id/tvFaqs"
        app:layout_constraintTop_toBottomOf="@+id/tvAsset" />

    <Spinner
        android:id="@+id/spCurrency"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner"
        android:paddingVertical="7dp"
        app:layout_constraintBottom_toTopOf="@+id/tvNisabMeasure"
        app:layout_constraintEnd_toEndOf="@+id/tvNisabMeasure"
        app:layout_constraintStart_toStartOf="@+id/tvNisabMeasure"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrency" />

    <Spinner
        android:id="@+id/spNisab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner"
        android:paddingVertical="7dp"
        app:layout_constraintBottom_toTopOf="@+id/tvNisab"
        app:layout_constraintEnd_toEndOf="@+id/tvNisab"
        app:layout_constraintStart_toStartOf="@+id/tvNisab"
        app:layout_constraintTop_toBottomOf="@+id/tvNisabMeasure" />

    <TextView
        android:id="@+id/tvFaqs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="32dp"
        android:text="@string/faqs"
        android:textColor="@color/quantum_googblue"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAsset" />

    <FrameLayout
        android:id="@+id/adContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>